--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>My-Shop</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <h1 class="name">My marketplace</h1>
+            <div id="card">
+                <button id="cardBtn" onclick="openCart()">
+                    <img src="https://cdn-icons-png.flaticon.com/512/263/263142.png">
+                </button>
+            </div>
+        </header>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js.js"></script>
 </body>
