change html, css, js

--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My-Shop</title>
+    <title>my Shop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container" id="container">
-        <header>
-            <h1 class="name">My marketplace</h1>
-            <div id="cart">
-                <button id="cartBtn" onclick="openCart()">
-                    <img src="https://cdn-icons-png.flaticon.com/512/263/263142.png">
-                </button>
-            </div>
-        </header>
-        <div id="cards"></div>
-    </div>
+    <header>
+        <h1>RoboCode Market</h1>
+        <div id="cart">
+            <button id="cartButton" onclick="openCart()">
+                <img src="https://cdn-icons-png.flaticon.com/512/126/126083.png" alt="cart">
+            </button>
+        </div>
+    </header>
+    <main>
+        <div id="cards">
+            
+        </div>
+    </main>
+
+</body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js.js"></script>
-</body>
 </html>
