--- a/userProfile.html
+++ b/userProfile.html
@@ -2,26 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Shop</title>
     <link rel="stylesheet" href="style.css">
+    <title>Profile</title>
 </head>
 <body>
     <header>
         <h1>RoboCode Market</h1>
-        <div id="cart">
-            <button id="cartButton" onclick="openCart()">
-                <img src="https://cdn-icons-png.flaticon.com/512/126/126083.png" alt="cart">
-            </button>
-        </div>
+        <a href="index.html" class="ProductLink">Products</a>
     </header>
-    <main>
-        <div id="cards">
-            
+    <main class="productCont">
+        <div id="profile"></div>
+        
+        <div id="userProd">
+            <h1>Seller Products:</h1>
+            <div id="user-products"></div>
         </div>
     </main>
-
-</body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="js.js"></script>
+    <script src="user.js"></script>
+</body>
 </html>
